<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Metro4All</string>
    <string name="sHomepage">http://nextgis.ru</string>
    <string name="sDetailpage">http://metro4all.ru</string>
    
    <string name="about_app">This application calculates subway routes and provides information for disabled on key stations. \n\nMore info at:</string>

	<string name="sSettings">Settings</string>
	<string name="sAbout">About</string>
	<string name="sNetworkGetErr">Getting data failed</string>
	<string name="sNetworkUnreachErr">Network is not available</string>
    <string name="sDownLoading">Downloading &#8230;</string>
    <string name="sZipExtractionProcess">Extracting &#8230;</string>
    <string name="sSearching">Searching &#8230;</string>
	<string name="sNetworkInvalidData">The data are invalid</string>
	<string name="sFileNotFound">File not found</string>
	<string name="sCannotReadFile">Cannot read file</string>
	<string name="sCannotGetPath">Cannot find path</string>
	<string name="sInvalidCSVData">The csv data are invalid. Field count is wrong. File: </string>
	<string name="sNoOrEmptyData">The data are absent or invalid. Please download the database.</string>
	
	<string name="sSelectDataToDownload">Select data to download</string>
	<string name="sUpdateAvaliable">Data updates is available</string>
	<string name="sDownload">Download</string>
	<string name="sDelete">Delete</string>
	<string name="sCancel">Cancel</string>
	<string name="sSearch">Search</string>
	<string name="sFromStation">Departure</string>
	<string name="sToStation">Arrival</string>
	<string name="sRoute">Option</string>
	<string name="sSchema">Schema</string>
	<string name="sStationName">Name: </string>
	<string name="sEntranceName">Entrance: </string>
	<string name="sExitName">Exit</string>
	<string name="sNotSet">Not set</string>
	<string name="sSelFromStation">Select departure station</string>
	<string name="sSelToStation">Select arrival station</string>
	<string name="sBarriersExist">Click here to see barriers&#8230;</string>
	<string name="sBarriersConflict">You have a conflict with your parameters</string>
	<string name="sMaxWCWidth">Maximum weelchair width</string>
	<string name="sStairsCount">Number of stairs</string>
	<string name="sStairsWORails">Of those, without rails or ramps</string>
	<string name="sLift">Elevator</string>
	<string name="sLiftEconomy">Number of stairs saved by elevator</string>
	<string name="sCM">cm</string>
	<string name="sNo">No</string>
	<string name="sMinRailWidth">Min rail width</string>
	<string name="sMaxRailWidth">Max rail width</string>
	<string name="sMaxAngle">Max angle of the ramp/rail</string>
	<string name="sDownloadData">Download new data?</string>
	<string name="sDeleteData">Delete existing data?</string>
	<string name="sConflictNotes">Exits that conflict with set limitations are shown in red</string>
	<string name="sLimits">My limitations</string>	
	<string name="sLimitsSet">Set my limitations</string>
	<string name="sSummary">Trip summary</string>		
	<string name="sSummaryClick">Press to show details</string>		
	<!-- tabs -->
	<string name="sSelAlphabeticalTab">A&#8230;Z</string>
	<string name="sSelLinesTab">Lines</string>
	<string name="sSelRecentTab">Recent</string>	
	<!-- dialogs -->
	<string name="sPrefTitle">Preferences</string>
	<string name="sPrefCatMain">Main</string>
	<string name="sPrefCatData">Data</string>
	<string name="sPrefNaviType">Navigation type</string>
	<string name="sPrefNaviTypeSummary">Navigation type affects the routing</string>
	<string name="sPrefNaviTypeTitle">Select navigation type</string>
	<string name="sPrefWheelBaseSize">Width between wheels</string>
	<string name="sPrefWheelBaseSizeSummary">The distance between the wheels (cm)</string>
	<string name="sPrefWheelBaseSizeTitle">Set width between the wheels</string>		
	<string name="sPrefCarriageSize">Max width of carriage</string>
	<string name="sPrefCarriageSizeSummary">The maximum width of carriage (cm)</string>
	<string name="sPrefCarriageSizeTitle">Set max width of carriage</string>	
	<string name="sPrefDataPath">Download data URL</string>
	<string name="sPrefDataPathSummary">Set download routing data URL</string>
	<string name="sPrefDataPathTitle">Set download data URL</string>
	<string name="sPrefUpdDataSummary">Click to update routing data</string>
	<string name="sPrefUpdDataTitle">Update data</string>
	<string name="stationFilterHintText">Введите часть названия станции</string>
</resources>
